editor-components/intro-section/intro-section11/intro-section11.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss"
  as *;

.container {
  position: relative;
  background-color: color-mix(
    in srgb,
    var(--composer-html-background),
    var(--composer-font-color-primary) 5%
  );

  &::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 80px;
    background-color: var(--composer-html-background);
    pointer-events: none;
  }

  .max-content {
    .content {
      display: flex;
      flex-direction: column;
      align-items: center;
      position: relative;
      text-align: center;
      justify-content: center;

      &:has(.vertical-content):has(.action-buttons) {
        gap: var(--composer-gap-lg);
      }

      .vertical-content {
        display: flex;
        flex-direction: column;
        align-items: center;
      }

      &:has(.spacer):not(:has(.action-buttons)) .vertical-content {
        padding-bottom: 5rem;
      }

      .subtitle {
        text-align: center;
        transform: translateX(0);
        &::before {
          display: none;
        }
      }

      .title,
      .description {
        text-align: center;
      }

      .action-buttons {
        z-index: 2;

        display: flex;
        flex-direction: row;
        gap: var(--composer-gap-md);

        .button {
          padding: calc(var(--composer-gap-md) * 1.5) !important;

          .button-text,
          .button-icon {
            font-size: 2rem;
          }
          .button-icon {
            display: flex;
            align-items: center;
            justify-content: center;
          }
        }
      }
      .spacer {
        background-color: var(--composer-html-background);
        position: absolute;
        bottom: 0;
        height: 3rem;
        width: 100vw;
        z-index: 1;
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .content {
        .action-buttons {
          .button {
            padding: calc(var(--composer-gap-xl) / 2) !important;
            .button-icon,
            .button-text {
              font-size: 1.5rem;
            }
          }
        }
        .spacer {
          height: 2.5rem;
        }
      }
    }
  }
}

